--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,11 @@ body {
 }
 
 canvas {
-   position: fixed;
-   top: 0;
-   left: 0;
-   z-index: -1;
+    margin: 0 auto;
+    display: block;
+}
+
+.example {
+    color: #6F56FE;
+    background-color: #2EFED2;
 }
